feat(marc-record-validation) rename ValidationField to SkippedValidationField